<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRootDetailPokemon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.DetalhesActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_layout"
        android:backgroundTint="@color/fundo_cinza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.0">

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressViewEXP"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:progressView_colorBackground="@color/branco"
            app:progressView_colorProgress="@color/fundo_green"
            app:progressView_labelColorInner="@color/branco"
            app:progressView_labelColorOuter="@color/preto"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelTypeface="bold"
            app:progressView_max="1000"
            app:progressView_min="15"
            app:progressView_radius="12dp" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressViewHP"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:progressView_colorBackground="@color/branco"
            app:progressView_colorProgress="@color/fundo_red"
            app:progressView_labelColorInner="@color/branco"
            app:progressView_labelColorOuter="@color/preto"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelTypeface="bold"
            app:progressView_max="300"
            app:progressView_min="0"
            app:progressView_radius="12dp" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressViewATK"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:progressView_colorBackground="@color/branco"
            app:progressView_colorProgress="@color/fundo_blue"
            app:progressView_labelColorInner="@color/branco"
            app:progressView_labelColorOuter="@color/preto"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelTypeface="bold"
            app:progressView_max="300"
            app:progressView_min="0"
            app:progressView_radius="12dp" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressViewDEF"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:progressView_colorBackground="@color/branco"
            app:progressView_colorProgress="@color/fundo_brown"
            app:progressView_labelColorInner="@color/branco"
            app:progressView_labelColorOuter="@color/preto"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelTypeface="bold"
            app:progressView_max="300"
            app:progressView_min="0"
            app:progressView_radius="12dp" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progressViewSPD"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:progressView_colorBackground="@color/branco"
            app:progressView_colorProgress="@color/fundo_yellow"
            app:progressView_labelColorInner="@color/branco"
            app:progressView_labelColorOuter="@color/preto"
            app:progressView_labelSize="13sp"
            app:progressView_labelSpace="10dp"
            app:progressView_labelTypeface="bold"
            app:progressView_max="300"
            app:progressView_min="0"
            app:progressView_radius="12dp" />

        <TextView
            android:id="@+id/textWeightDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_detail_kg"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textHeightDetail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameDetalhe" />

        <TextView
            android:id="@+id/textHeightDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_detail_m"
            android:textColor="@color/branco"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textWeightDetail"
            app:layout_constraintTop_toBottomOf="@+id/textNameDetalhe" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_detail_weight"
            android:textColor="@color/cinza_claro"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textWeightDetail"
            app:layout_constraintStart_toStartOf="@+id/textWeightDetail"
            app:layout_constraintTop_toBottomOf="@+id/textWeightDetail" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_detail_height"
            android:textColor="@color/cinza_claro"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textHeightDetail"
            app:layout_constraintStart_toStartOf="@+id/textHeightDetail"
            app:layout_constraintTop_toBottomOf="@+id/textHeightDetail" />

        <TextView
            android:id="@+id/textNameDetalhe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/text_detail_name"
            android:textColor="@color/branco"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_detail_exp"
            android:textColor="@color/cinza_claro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_detail_base_stat"
            android:textColor="@color/branco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_detail_hp"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.16" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_detail_atk"
            android:textColor="@color/branco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_detail_def"
            android:textColor="@color/branco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_detail_spd"
            android:textColor="@color/branco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageDetalhe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:transitionName="imageTransition"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/squardle" />

    <TextView
        android:id="@+id/textPokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_detail_title"
        android:textColor="@color/branco"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/ibArrowBack"
        app:layout_constraintStart_toEndOf="@+id/ibArrowBack"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textNumberDetalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_detail_number"
        android:textColor="@color/branco"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageButton
        android:id="@+id/ibArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>